# Controle_de_estoque_de_comesticos

./: README.md  app.py  database.py  models.py  package-lock.json  package.json  packege.json  pyproject.toml
angular-app/: angular.json  package-lock.json  package.json  packege.json
angular-app/.angular/cache/20.3.9/babel-webpack/: 0139c971741a3a39.json  01d3e11a5cab072a.json  0252d130ebefabf0.json  02ea258dc38a3efc.json  0329cbcd2c46d395.json  03410486550107c9.json  0352ff32ad5d4a28.json  03ba415e5d2dcadc.json  05251de761e8ba2a.json  (+267 more)
angular-app/src/: index.html  styles.css
angular-app/src/app/: app.component.ts  app.routes.ts
angular-app/src/app/service/: api.service.ts
angular-frontend/: INSTALACAO.md  README.md  angular.json  package.json
angular-frontend/src/: index.html  styles.css
angular-frontend/src/app/: app.component.html  app.routes.ts
backend/: README.md  database.py  main.py  schemas.py
backend/routers/: alertas.py  configuracoes.py  marcas.py  movimentacoes.py  produtos.py  relatorios.py
flask-app/: README.md  app.py  models.py
flask-app/instance/: inventario.db
flask-app/templates/: alertas.html  base.html  dashboard.html  movimentacoes.html  produto_detalhes.html  produto_form.html  produtos.html  relatorios.html
lib/: api.ts  db.ts
routers/: alertas.py  dashboard.py  movimentacoes.py  produtos.py  relatorios.py
templates/: base.html  dashboard.html
templates/alertas/: index.html
templates/movimentacoes/: index.html
templates/produtos/: detalhe.html  form.html  lista.html
templates/relatorios/: index.html
(+34 files in other folders)
