[project]
name = "controle-de-estoque-de-comesticos"
version = "0.1.0"
description = ""
authors = [
    {name = "Any Caroline",email = "168498509+Anycarol12345@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.2,<0.119.0)",
    "shell (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "controle_de_estoque_de_comesticos", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
